--- a/static/blog.original.css
+++ b/static/blog.original.css
@@ -14,12 +14,12 @@ h5 {
     line-height: 120%;
 }
 
-h5 {
+.weekly h2, h5 {
     font-size: 18px;
     font-weight: bold;
 }
 
-#navTop {
+header {
     text-align: right;
 }
 
@@ -93,15 +93,15 @@ th.valign-middle,td.valign-middle{
     vertical-align:middle
 }
 
-nav {
+nav, header, footer {
     font-size: 16px;
 }
 
-nav a {
+nav a,header a, footer a {
     text-decoration: none;
 }
 
-nav a:hover {
+header a:hover, header a:hover, footer a:hover {
     text-decoration: underline;
 }
 
@@ -160,24 +160,23 @@ p {
     padding-bottom: 80px;
 }
 
-#content,
-#footer {
+#content, footer {
     margin-left: auto;
     margin-right: auto;
     max-width: 800px;
 }
 
-#footer {
+footer {
     margin-top: 10px;
     margin-bottom: 20px;
     text-align: center;
 }
 
-#footer ul li {
+footer ul li {
     display: inline;
 }
 
-#footer ul li+li:before {
+footer ul li+li:before {
     content: " – ";
 }
 
@@ -187,6 +186,9 @@ p {
 
 #navBottom {
     padding-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 950px;
 }
 
 #previousArticle,
@@ -203,6 +205,14 @@ p {
     text-decoration: line-through;
 }
 
+hr {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: none;
+    border-top: solid 1pt white;
+    width: 60%;
+}
+  
 /* Pygments */
 
 .listingblock .pygments .hll {
