--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -82,40 +82,36 @@
 
 </head>
 <body>
-<nav id="navTop">
+<header>
     <a href="<%= blog_root_url %>"><%= blog_name %></a>
+</header>
+<main>
+  <h1 id="articleTitle"><%= article.title %></h1>
+  <div id="content"<%= custom_main_class ? " class=\"#{custom_main_class}\"" : "" %>>
+      <div id="subtitle">
+          <%= article.authors.collect{|author| author.main_url ? "<a href=\"#{author.main_url}\">#{author.name}</a>" : author.name }.join(', ') %>
+          <% if display_article_date %>,<%= article_date %><% end %>
+      </div>
+      <%= article_content %>
+  </div>
+</main>
+<nav id="navBottom">
+  <% if previous_article %>
+      <a id="previousArticle" href="<%= previous_article.absolute_url %>">← <%= previous_article.title %></a>
+  <% end %>
+  <% if next_article %>
+      <a id="nextArticle" href="<%= next_article.absolute_url %>"><%= next_article.title %> →</a>
+  <% end %>
 </nav>
-<h1 id="articleTitle"><%= article.title %></h1>
-<div id="content">
-    <article>
-    <div id="subtitle">
-        <%= (lang == 'fr') ? 'par' : 'by' %>
-        <%= article.authors.collect{|author| author.main_url ? "<a href=\"#{author.main_url}\">#{author.name}</a>" : author.name }.join(', ') %>
-        <% if display_article_date %>
-            , 
-            <%= article_date %>
-        <% end %>
-    </div>
-    <%= article_content %>
-    </article>
-    <nav id="navBottom">
-        <% if previous_article %>
-            <a id="previousArticle" href="<%= previous_article.absolute_url %>">← <%= previous_article.title %></a>
-        <% end %>
-        <% if next_article %>
-            <a id="nextArticle" href="<%= next_article.absolute_url %>"><%= next_article.title %> →</a>
-        <% end %>
-    </nav>
-</div>
 
-<nav id="footer">
+<footer>
   <ul>
     <li><a href="https://archiloque.net">Homepage</a></li>
     <li><a href="https://archiloque.net/blog">Blog</a></li>
     <li><a href="https://archiloque.net/weekly">Weekly</a></li>
     <li><a href="https://twitter.com/archiloque">Twitter</a></li>
   </ul>
-</nav>
+</footer>
 
 </body>
 </html>
