--- a/templates/main.erb.html
+++ b/templates/main.erb.html
@@ -93,7 +93,7 @@
         <% end %>
     </div>
 
-    <nav id="footer">
+    <footer>
         <ul>
             <li><a href="https://archiloque.net">Homepage</a></li>
             <li><a href="https://archiloque.net/blog">Blog</a></li>
