--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -40,8 +40,8 @@
     <meta property="og:image" content="<%= "#{article.absolute_url}#{article.image}" %>" />
     <meta property="twitter:image" content="<%= "#{article.absolute_url}#{article.image}" %>" />
     <% else %>
-    <meta property="og:image" content="<%= "site_logo_url" %>" />
-    <meta property="twitter:image" content="<%= "site_logo_url" %>" />
+    <meta property="og:image" content="<%= site_logo_url %>" />
+    <meta property="twitter:image" content="<%= site_logo_url %>" />
     <% end %>
 
     <script type="application/ld+json">
