--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -111,7 +111,8 @@
   <ul>
     <li><a href="https://archiloque.net">Homepage</a></li>
     <li><a href="https://archiloque.net/blog">Blog</a></li>
-    <li><a href="https://archiloque.net/weekly">Weekly</a></li>
+    <li><a href="https://archiloque.net/weekly">Weekly Links</a></li>
+    <li><a href="http://tinyletter.com/archiloque">Newsletter</a></li>
     <li><a href="https://twitter.com/archiloque">Twitter</a></li>
   </ul>
 </footer>
