--- a/templates/main.erb.html
+++ b/templates/main.erb.html
@@ -95,10 +95,11 @@
 
     <footer>
         <ul>
-            <li><a href="https://archiloque.net">Homepage</a></li>
-            <li><a href="https://archiloque.net/blog">Blog</a></li>
-            <li><a href="https://archiloque.net/weekly">Weekly</a></li>
-            <li><a href="https://twitter.com/archiloque">Twitter</a></li>
+          <li><a href="https://archiloque.net">Homepage</a></li>
+          <li><a href="https://archiloque.net/blog">Blog</a></li>
+          <li><a href="https://archiloque.net/weekly">Weekly Links</a></li>
+          <li><a href="http://tinyletter.com/archiloque">Newsletter</a></li>
+          <li><a href="https://twitter.com/archiloque">Twitter</a></li>
         </ul>
     </nav>
 
