--- a/static/blog.original.css
+++ b/static/blog.original.css
@@ -1,9 +1,9 @@
 body {
-    background-color: #4575d2;
-    color: white;
+    background-color: #f8fbff;
+    color: #004aa0;
     font-family: "Futura", Calibri, sans-serif;
     font-size: 18px;
-    line-height: 30px;
+    line-height: 32px;
 }
 
 h1,
@@ -24,7 +24,7 @@ header {
 }
 
 a {
-    color: white;
+    color: #004aa0;
     text-decoration: underline;
 }
 
@@ -45,8 +45,6 @@ pre {
 .imageblock img {
     max-width: 80%;
     height: auto;
-    border: 5px rgba(255, 255, 255, 0.90) solid;
-    border-radius: 5px;
 }
 
 table {
@@ -223,1062 +221,72 @@ hr {
 }
   
 /* Pygments */
-
-.listingblock .pygments .hll {
-    background-color: #333333
-}
-
-.listingblock .pygments {
-    background: #111111;
-    color: #ffffff
-}
-
-.listingblock .pygments .tok-c {
-    color: #008800;
-    font-style: italic;
-    background-color: #0f140f
-}
-
-
-/* Comment */
-.listingblock .pygments .tok-err {
-    color: #ffffff
-}
-
-
-/* Error */
-.listingblock .pygments .tok-esc {
-    color: #ffffff
-}
-
-
-/* Escape */
-
-.listingblock .pygments .tok-g {
-    color: #ffffff
-}
-
-
-/* Generic */
-
-.listingblock .pygments .tok-k {
-    color: #fb660a;
-    font-weight: bold
-}
-
-
-/* Keyword */
-
-.listingblock .pygments .tok-l {
-    color: #ffffff
-}
-
-
-/* Literal */
-
-.listingblock .pygments .tok-n {
-    color: #ffffff
-}
-
-
-/* Name */
-
-.listingblock .pygments .tok-o {
-    color: #ffffff
-}
-
-
-/* Operator */
-
-.listingblock .pygments .tok-x {
-    color: #ffffff
-}
-
-
-/* Other */
-
-.listingblock .pygments .tok-p {
-    color: #ffffff
-}
-
-
-/* Punctuation */
-
-.listingblock .pygments .tok-cm {
-    color: #008800;
-    font-style: italic;
-    background-color: #0f140f
-}
-
-
-/* Comment.Multiline */
-
-.listingblock .pygments .tok-cp {
-    color: #ff0007;
-    font-weight: bold;
-    font-style: italic;
-    background-color: #0f140f
-}
-
-
-/* Comment.Preproc */
-
-.listingblock .pygments .tok-c1 {
-    color: #008800;
-    font-style: italic;
-    background-color: #0f140f
-}
-
-
-/* Comment.Single */
-
-.listingblock .pygments .tok-cs {
-    color: #008800;
-    font-style: italic;
-    background-color: #0f140f
-}
-
-
-/* Comment.Special */
-
-.listingblock .pygments .tok-gd {
-    color: #ffffff
-}
-
-
-/* Generic.Deleted */
-
-.listingblock .pygments .tok-ge {
-    color: #ffffff
-}
-
-
-/* Generic.Emph */
-
-.listingblock .pygments .tok-gr {
-    color: #ffffff
-}
-
-
-/* Generic.Error */
-
-.listingblock .pygments .tok-gh {
-    color: #ffffff;
-    font-weight: bold
-}
-
-
-/* Generic.Heading */
-
-.listingblock .pygments .tok-gi {
-    color: #ffffff
-}
-
-
-/* Generic.Inserted */
-
-.listingblock .pygments .tok-go {
-    color: #444444;
-    background-color: #222222
-}
-
-
-/* Generic.Output */
-
-.listingblock .pygments .tok-gp {
-    color: #ffffff
-}
-
-
-/* Generic.Prompt */
-
-.listingblock .pygments .tok-gs {
-    color: #ffffff
-}
-
-
-/* Generic.Strong */
-
-.listingblock .pygments .tok-gu {
-    color: #ffffff;
-    font-weight: bold
-}
-
-
-/* Generic.Subheading */
-
-.listingblock .pygments .tok-gt {
-    color: #ffffff
-}
-
-
-/* Generic.Traceback */
-
-.listingblock .pygments .tok-kc {
-    color: #fb660a;
-    font-weight: bold
-}
-
-
-/* Keyword.Constant */
-
-.listingblock .pygments .tok-kd {
-    color: #fb660a;
-    font-weight: bold
-}
-
-
-/* Keyword.Declaration */
-
-.listingblock .pygments .tok-kn {
-    color: #fb660a;
-    font-weight: bold
-}
-
-
-/* Keyword.Namespace */
-
-.listingblock .pygments .tok-kp {
-    color: #fb660a
-}
-
-
-/* Keyword.Pseudo */
-
-.listingblock .pygments .tok-kr {
-    color: #fb660a;
-    font-weight: bold
-}
-
-
-/* Keyword.Reserved */
-
-.listingblock .pygments .tok-kt {
-    color: #cdcaa9;
-    font-weight: bold
-}
-
-
-/* Keyword.Type */
-
-.listingblock .pygments .tok-ld {
-    color: #ffffff
-}
-
-
-/* Literal.Date */
-
-.listingblock .pygments .tok-m {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number */
-
-.listingblock .pygments .tok-s {
-    color: #0086d2
-}
-
-
-/* Literal.String */
-
-.listingblock .pygments .tok-na {
-    color: #ff0086;
-    font-weight: bold
-}
-
-
-/* Name.Attribute */
-
-.listingblock .pygments .tok-nb {
-    color: #ffffff
-}
-
-
-/* Name.Builtin */
-
-.listingblock .pygments .tok-nc {
-    color: #ffffff
-}
-
-
-/* Name.Class */
-
-.listingblock .pygments .tok-no {
-    color: #0086d2
-}
-
-
-/* Name.Constant */
-
-.listingblock .pygments .tok-nd {
-    color: #ffffff
-}
-
-
-/* Name.Decorator */
-
-.listingblock .pygments .tok-ni {
-    color: #ffffff
-}
-
-
-/* Name.Entity */
-
-.listingblock .pygments .tok-ne {
-    color: #ffffff
-}
-
-
-/* Name.Exception */
-
-.listingblock .pygments .tok-nf {
-    color: #ff0086;
-    font-weight: bold
-}
-
-
-/* Name.Function */
-
-.listingblock .pygments .tok-nl {
-    color: #ffffff
-}
-
-
-/* Name.Label */
-
-.listingblock .pygments .tok-nn {
-    color: #ffffff
-}
-
-
-/* Name.Namespace */
-
-.listingblock .pygments .tok-nx {
-    color: #ffffff
-}
-
-
-/* Name.Other */
-
-.listingblock .pygments .tok-py {
-    color: #ffffff
-}
-
-
-/* Name.Property */
-
-.listingblock .pygments .tok-nt {
-    color: #fb660a;
-    font-weight: bold
-}
-
-
-/* Name.Tag */
-
-.listingblock .pygments .tok-nv {
-    color: #fb660a
-}
-
-
-/* Name.Variable */
-
-.listingblock .pygments .tok-ow {
-    color: #ffffff
-}
-
-
-/* Operator.Word */
-
-.listingblock .pygments .tok-w {
-    color: #888888
-}
-
-
-/* Text.Whitespace */
-
-.listingblock .pygments .tok-mb {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number.Bin */
-
-.listingblock .pygments .tok-mf {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number.Float */
-
-.listingblock .pygments .tok-mh {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number.Hex */
-
-.listingblock .pygments .tok-mi {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number.Integer */
-
-.listingblock .pygments .tok-mo {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number.Oct */
-
-.listingblock .pygments .tok-sb {
-    color: #0086d2
-}
-
-
-/* Literal.String.Backtick */
-
-.listingblock .pygments .tok-sc {
-    color: #0086d2
-}
-
-
-/* Literal.String.Char */
-
-.listingblock .pygments .tok-sd {
-    color: #0086d2
-}
-
-
-/* Literal.String.Doc */
-
-.listingblock .pygments .tok-s2 {
-    color: #0086d2
-}
-
-
-/* Literal.String.Double */
-
-.listingblock .pygments .tok-se {
-    color: #0086d2
-}
-
-
-/* Literal.String.Escape */
-
-.listingblock .pygments .tok-sh {
-    color: #0086d2
-}
-
-
-/* Literal.String.Heredoc */
-
-.listingblock .pygments .tok-si {
-    color: #0086d2
-}
-
-
-/* Literal.String.Interpol */
-
-.listingblock .pygments .tok-sx {
-    color: #0086d2
-}
-
-
-/* Literal.String.Other */
-
-.listingblock .pygments .tok-sr {
-    color: #0086d2
-}
-
-
-/* Literal.String.Regex */
-
-.listingblock .pygments .tok-s1 {
-    color: #0086d2
-}
-
-
-/* Literal.String.Single */
-
-.listingblock .pygments .tok-ss {
-    color: #0086d2
-}
-
-
-/* Literal.String.Symbol */
-
-.listingblock .pygments .tok-bp {
-    color: #ffffff
-}
-
-
-/* Name.Builtin.Pseudo */
-
-.listingblock .pygments .tok-vc {
-    color: #fb660a
-}
-
-
-/* Name.Variable.Class */
-
-.listingblock .pygments .tok-vg {
-    color: #fb660a
-}
-
-
-/* Name.Variable.Global */
-
-.listingblock .pygments .tok-vi {
-    color: #fb660a
-}
-
-
-/* Name.Variable.Instance */
-
-.listingblock .pygments .tok-il {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number.Integer.Long */
-
-
-/* Pygments */
-
-.listingblock .pygments .hll {
-    background-color: #333333
-}
-
-.listingblock .pygments {
-    background: #111111;
-    color: #ffffff
-}
-
-.listingblock .pygments .tok-c {
-    color: #008800;
-    font-style: italic;
-    background-color: #0f140f
-}
-
-
-/* Comment */
-
-.listingblock .pygments .tok-err {
-    color: #ffffff
-}
-
-
-/* Error */
-
-.listingblock .pygments .tok-esc {
-    color: #ffffff
-}
-
-
-/* Escape */
-
-.listingblock .pygments .tok-g {
-    color: #ffffff
-}
-
-
-/* Generic */
-
-.listingblock .pygments .tok-k {
-    color: #fb660a;
-    font-weight: bold
-}
-
-
-/* Keyword */
-
-.listingblock .pygments .tok-l {
-    color: #ffffff
-}
-
-
-/* Literal */
-
-.listingblock .pygments .tok-n {
-    color: #ffffff
-}
-
-
-/* Name */
-
-.listingblock .pygments .tok-o {
-    color: #ffffff
-}
-
-
-/* Operator */
-
-.listingblock .pygments .tok-x {
-    color: #ffffff
-}
-
-
-/* Other */
-
-.listingblock .pygments .tok-p {
-    color: #ffffff
-}
-
-
-/* Punctuation */
-
-.listingblock .pygments .tok-cm {
-    color: #008800;
-    font-style: italic;
-    background-color: #0f140f
-}
-
-
-/* Comment.Multiline */
-
-.listingblock .pygments .tok-cp {
-    color: #ff0007;
-    font-weight: bold;
-    font-style: italic;
-    background-color: #0f140f
-}
-
-
-/* Comment.Preproc */
-
-.listingblock .pygments .tok-c1 {
-    color: #008800;
-    font-style: italic;
-    background-color: #0f140f
-}
-
-
-/* Comment.Single */
-
-.listingblock .pygments .tok-cs {
-    color: #008800;
-    font-style: italic;
-    background-color: #0f140f
-}
-
-
-/* Comment.Special */
-
-.listingblock .pygments .tok-gd {
-    color: #ffffff
-}
-
-
-/* Generic.Deleted */
-
-.listingblock .pygments .tok-ge {
-    color: #ffffff
-}
-
-
-/* Generic.Emph */
-
-.listingblock .pygments .tok-gr {
-    color: #ffffff
-}
-
-
-/* Generic.Error */
-
-.listingblock .pygments .tok-gh {
-    color: #ffffff;
-    font-weight: bold
-}
-
-
-/* Generic.Heading */
-
-.listingblock .pygments .tok-gi {
-    color: #ffffff
-}
-
-
-/* Generic.Inserted */
-
-.listingblock .pygments .tok-go {
-    color: #444444;
-    background-color: #222222
-}
-
-
-/* Generic.Output */
-
-.listingblock .pygments .tok-gp {
-    color: #ffffff
-}
-
-
-/* Generic.Prompt */
-
-.listingblock .pygments .tok-gs {
-    color: #ffffff
-}
-
-
-/* Generic.Strong */
-
-.listingblock .pygments .tok-gu {
-    color: #ffffff;
-    font-weight: bold
-}
-
-
-/* Generic.Subheading */
-
-.listingblock .pygments .tok-gt {
-    color: #ffffff
-}
-
-
-/* Generic.Traceback */
-
-.listingblock .pygments .tok-kc {
-    color: #fb660a;
-    font-weight: bold
-}
-
-
-/* Keyword.Constant */
-
-.listingblock .pygments .tok-kd {
-    color: #fb660a;
-    font-weight: bold
-}
-
-
-/* Keyword.Declaration */
-
-.listingblock .pygments .tok-kn {
-    color: #fb660a;
-    font-weight: bold
-}
-
-
-/* Keyword.Namespace */
-
-.listingblock .pygments .tok-kp {
-    color: #fb660a
-}
-
-
-/* Keyword.Pseudo */
-
-.listingblock .pygments .tok-kr {
-    color: #fb660a;
-    font-weight: bold
-}
-
-
-/* Keyword.Reserved */
-
-.listingblock .pygments .tok-kt {
-    color: #cdcaa9;
-    font-weight: bold
-}
-
-
-/* Keyword.Type */
-
-.listingblock .pygments .tok-ld {
-    color: #ffffff
-}
-
-
-/* Literal.Date */
-
-.listingblock .pygments .tok-m {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number */
-
-.listingblock .pygments .tok-s {
-    color: #0086d2
-}
-
-
-/* Literal.String */
-
-.listingblock .pygments .tok-na {
-    color: #ff0086;
-    font-weight: bold
-}
-
-
-/* Name.Attribute */
-
-.listingblock .pygments .tok-nb {
-    color: #ffffff
-}
-
-
-/* Name.Builtin */
-
-.listingblock .pygments .tok-nc {
-    color: #ffffff
-}
-
-
-/* Name.Class */
-
-.listingblock .pygments .tok-no {
-    color: #0086d2
-}
-
-
-/* Name.Constant */
-
-.listingblock .pygments .tok-nd {
-    color: #ffffff
-}
-
-
-/* Name.Decorator */
-
-.listingblock .pygments .tok-ni {
-    color: #ffffff
-}
-
-
-/* Name.Entity */
-
-.listingblock .pygments .tok-ne {
-    color: #ffffff
-}
-
-
-/* Name.Exception */
-
-.listingblock .pygments .tok-nf {
-    color: #ff0086;
-    font-weight: bold
-}
-
-
-/* Name.Function */
-
-.listingblock .pygments .tok-nl {
-    color: #ffffff
-}
-
-
-/* Name.Label */
-
-.listingblock .pygments .tok-nn {
-    color: #ffffff
-}
-
-
-/* Name.Namespace */
-
-.listingblock .pygments .tok-nx {
-    color: #ffffff
-}
-
-
-/* Name.Other */
-
-.listingblock .pygments .tok-py {
-    color: #ffffff
-}
-
-
-/* Name.Property */
-
-.listingblock .pygments .tok-nt {
-    color: #fb660a;
-    font-weight: bold
-}
-
-
-/* Name.Tag */
-
-.listingblock .pygments .tok-nv {
-    color: #fb660a
-}
-
-
-/* Name.Variable */
-
-.listingblock .pygments .tok-ow {
-    color: #ffffff
-}
-
-
-/* Operator.Word */
-
-.listingblock .pygments .tok-w {
-    color: #888888
-}
-
-
-/* Text.Whitespace */
-
-.listingblock .pygments .tok-mb {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number.Bin */
-
-.listingblock .pygments .tok-mf {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number.Float */
-
-.listingblock .pygments .tok-mh {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number.Hex */
-
-.listingblock .pygments .tok-mi {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number.Integer */
-
-.listingblock .pygments .tok-mo {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number.Oct */
-
-.listingblock .pygments .tok-sb {
-    color: #0086d2
-}
-
-
-/* Literal.String.Backtick */
-
-.listingblock .pygments .tok-sc {
-    color: #0086d2
-}
-
-
-/* Literal.String.Char */
-
-.listingblock .pygments .tok-sd {
-    color: #0086d2
-}
-
-
-/* Literal.String.Doc */
-
-.listingblock .pygments .tok-s2 {
-    color: #0086d2
-}
-
-
-/* Literal.String.Double */
-
-.listingblock .pygments .tok-se {
-    color: #0086d2
-}
-
-
-/* Literal.String.Escape */
-
-.listingblock .pygments .tok-sh {
-    color: #0086d2
-}
-
-
-/* Literal.String.Heredoc */
-
-.listingblock .pygments .tok-si {
-    color: #0086d2
-}
-
-
-/* Literal.String.Interpol */
-
-.listingblock .pygments .tok-sx {
-    color: #0086d2
-}
-
-
-/* Literal.String.Other */
-
-.listingblock .pygments .tok-sr {
-    color: #0086d2
-}
-
-
-/* Literal.String.Regex */
-
-.listingblock .pygments .tok-s1 {
-    color: #0086d2
-}
-
-
-/* Literal.String.Single */
-
-.listingblock .pygments .tok-ss {
-    color: #0086d2
-}
-
-
-/* Literal.String.Symbol */
-
-.listingblock .pygments .tok-bp {
-    color: #ffffff
-}
-
-
-/* Name.Builtin.Pseudo */
-
-.listingblock .pygments .tok-vc {
-    color: #fb660a
-}
-
-
-/* Name.Variable.Class */
-
-.listingblock .pygments .tok-vg {
-    color: #fb660a
-}
-
-
-/* Name.Variable.Global */
-
-.listingblock .pygments .tok-vi {
-    color: #fb660a
-}
-
-
-/* Name.Variable.Instance */
-
-.listingblock .pygments .tok-il {
-    color: #0086f7;
-    font-weight: bold
-}
-
-
-/* Literal.Number.Integer.Long */
+pre.pygments .hll { background-color: #ffffcc }
+pre.pygments  { background: #f0f0f0; }
+pre.pygments .tok-c { color: #60a0b0; font-style: italic } /* Comment */
+pre.pygments .tok-err { border: 1px solid #FF0000 } /* Error */
+pre.pygments .tok-k { color: #007020; font-weight: bold } /* Keyword */
+pre.pygments .tok-o { color: #666666 } /* Operator */
+pre.pygments .tok-ch { color: #60a0b0; font-style: italic } /* Comment.Hashbang */
+pre.pygments .tok-cm { color: #60a0b0; font-style: italic } /* Comment.Multiline */
+pre.pygments .tok-cp { color: #007020 } /* Comment.Preproc */
+pre.pygments .tok-cpf { color: #60a0b0; font-style: italic } /* Comment.PreprocFile */
+pre.pygments .tok-c1 { color: #60a0b0; font-style: italic } /* Comment.Single */
+pre.pygments .tok-cs { color: #60a0b0; background-color: #fff0f0 } /* Comment.Special */
+pre.pygments .tok-gd { color: #A00000 } /* Generic.Deleted */
+pre.pygments .tok-ge { font-style: italic } /* Generic.Emph */
+pre.pygments .tok-gr { color: #FF0000 } /* Generic.Error */
+pre.pygments .tok-gh { color: #000080; font-weight: bold } /* Generic.Heading */
+pre.pygments .tok-gi { color: #00A000 } /* Generic.Inserted */
+pre.pygments .tok-go { color: #888888 } /* Generic.Output */
+pre.pygments .tok-gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
+pre.pygments .tok-gs { font-weight: bold } /* Generic.Strong */
+pre.pygments .tok-gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+pre.pygments .tok-gt { color: #0044DD } /* Generic.Traceback */
+pre.pygments .tok-kc { color: #007020; font-weight: bold } /* Keyword.Constant */
+pre.pygments .tok-kd { color: #007020; font-weight: bold } /* Keyword.Declaration */
+pre.pygments .tok-kn { color: #007020; font-weight: bold } /* Keyword.Namespace */
+pre.pygments .tok-kp { color: #007020 } /* Keyword.Pseudo */
+pre.pygments .tok-kr { color: #007020; font-weight: bold } /* Keyword.Reserved */
+pre.pygments .tok-kt { color: #902000 } /* Keyword.Type */
+pre.pygments .tok-m { color: #40a070 } /* Literal.Number */
+pre.pygments .tok-s { color: #4070a0 } /* Literal.String */
+pre.pygments .tok-na { color: #4070a0 } /* Name.Attribute */
+pre.pygments .tok-nb { color: #007020 } /* Name.Builtin */
+pre.pygments .tok-nc { color: #0e84b5; font-weight: bold } /* Name.Class */
+pre.pygments .tok-no { color: #60add5 } /* Name.Constant */
+pre.pygments .tok-nd { color: #555555; font-weight: bold } /* Name.Decorator */
+pre.pygments .tok-ni { color: #d55537; font-weight: bold } /* Name.Entity */
+pre.pygments .tok-ne { color: #007020 } /* Name.Exception */
+pre.pygments .tok-nf { color: #06287e } /* Name.Function */
+pre.pygments .tok-nl { color: #002070; font-weight: bold } /* Name.Label */
+pre.pygments .tok-nn { color: #0e84b5; font-weight: bold } /* Name.Namespace */
+pre.pygments .tok-nt { color: #062873; font-weight: bold } /* Name.Tag */
+pre.pygments .tok-nv { color: #bb60d5 } /* Name.Variable */
+pre.pygments .tok-ow { color: #007020; font-weight: bold } /* Operator.Word */
+pre.pygments .tok-w { color: #bbbbbb } /* Text.Whitespace */
+pre.pygments .tok-mb { color: #40a070 } /* Literal.Number.Bin */
+pre.pygments .tok-mf { color: #40a070 } /* Literal.Number.Float */
+pre.pygments .tok-mh { color: #40a070 } /* Literal.Number.Hex */
+pre.pygments .tok-mi { color: #40a070 } /* Literal.Number.Integer */
+pre.pygments .tok-mo { color: #40a070 } /* Literal.Number.Oct */
+pre.pygments .tok-sa { color: #4070a0 } /* Literal.String.Affix */
+pre.pygments .tok-sb { color: #4070a0 } /* Literal.String.Backtick */
+pre.pygments .tok-sc { color: #4070a0 } /* Literal.String.Char */
+pre.pygments .tok-dl { color: #4070a0 } /* Literal.String.Delimiter */
+pre.pygments .tok-sd { color: #4070a0; font-style: italic } /* Literal.String.Doc */
+pre.pygments .tok-s2 { color: #4070a0 } /* Literal.String.Double */
+pre.pygments .tok-se { color: #4070a0; font-weight: bold } /* Literal.String.Escape */
+pre.pygments .tok-sh { color: #4070a0 } /* Literal.String.Heredoc */
+pre.pygments .tok-si { color: #70a0d0; font-style: italic } /* Literal.String.Interpol */
+pre.pygments .tok-sx { color: #c65d09 } /* Literal.String.Other */
+pre.pygments .tok-sr { color: #235388 } /* Literal.String.Regex */
+pre.pygments .tok-s1 { color: #4070a0 } /* Literal.String.Single */
+pre.pygments .tok-ss { color: #517918 } /* Literal.String.Symbol */
+pre.pygments .tok-bp { color: #007020 } /* Name.Builtin.Pseudo */
+pre.pygments .tok-fm { color: #06287e } /* Name.Function.Magic */
+pre.pygments .tok-vc { color: #bb60d5 } /* Name.Variable.Class */
+pre.pygments .tok-vg { color: #bb60d5 } /* Name.Variable.Global */
+pre.pygments .tok-vi { color: #bb60d5 } /* Name.Variable.Instance */
+pre.pygments .tok-vm { color: #bb60d5 } /* Name.Variable.Magic */
+pre.pygments .tok-il { color: #40a070 } /* Literal.Number.Integer.Long */
