--- a/templates/main.erb.html
+++ b/templates/main.erb.html
@@ -96,7 +96,7 @@
         <ul>
           <li><a href="https://archiloque.net">Homepage</a></li>
           <li><a href="https://archiloque.net/blog">Blog</a></li>
-          <li><a href="https://archiloque.net/weekly">Weekly Links</a></li>
+          <li><a href="https://archiloque.net/weekly">Chosen Links</a></li>
           <li><a href="https://tinyletter.com/archiloque">Newsletter</a></li>
           <li><a href="https://twitter.com/archiloque">Twitter</a></li>
         </ul>
