--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -87,9 +87,9 @@
 <main>
   <h1 id="articleTitle"><%= article.title %></h1>
   <div id="content"<%= custom_main_class ? " class=\"#{custom_main_class}\"" : "" %>>
-      <div id="subtitle">
+      <nav id="authors">
           <%= article.authors.collect{|author| author.main_url ? "<a href=\"#{author.main_url}\">#{author.name}</a>" : author.name }.join(', ') %><% if display_article_date %>, <%= article_date %><% end %>
-      </div>
+      </nav>
       <%= article_content %>
   </div>
 </main>
