--- a/static/blog.original.css
+++ b/static/blog.original.css
@@ -3,7 +3,13 @@ body {
     color: #004aa0;
     font-family: "Gill Sans", "Futura", Calibri, sans-serif;
     font-size: 18px;
-    line-height: 32px;
+    line-height: 190%;
+}
+
+@media (max-width: 1250px) {
+    body {
+        font-size: 24px;
+    }
 }
 
 h1,
@@ -11,14 +17,15 @@ h2,
 h3,
 h4,
 h5 {
-    line-height: 140%;
+    line-height: 160%;
 }
 
 header {
     text-align: right;
 }
 
-a, #authors a {
+a,
+#authors a {
     color: #004aa0;
     text-decoration: underline;
 }
@@ -27,7 +34,8 @@ a:hover {
     text-decoration: none;
 }
 
-pre, code { 
+pre,
+code {
     font-family: "JetBrains Mono", "Lucida Console", Consolas, Monaco, monospace;
     font-size: 14px;
     line-height: 16px;
@@ -71,34 +79,51 @@ p.tableblock {
     margin: 0;
 }
 
-th.halign-left,td.halign-left{
-    text-align:left
-}
-th.halign-right,td.halign-right{
-    text-align:right
-}
-th.halign-center,td.halign-center{
-    text-align:center
-}
-th.valign-top,td.valign-top{
-    vertical-align:top
-}
-th.valign-bottom,td.valign-bottom{
-    vertical-align:bottom
-}
-th.valign-middle,td.valign-middle{
-    vertical-align:middle
+th.halign-left,
+td.halign-left {
+    text-align: left
 }
 
-nav, header, footer {
+th.halign-right,
+td.halign-right {
+    text-align: right
+}
+
+th.halign-center,
+td.halign-center {
+    text-align: center
+}
+
+th.valign-top,
+td.valign-top {
+    vertical-align: top
+}
+
+th.valign-bottom,
+td.valign-bottom {
+    vertical-align: bottom
+}
+
+th.valign-middle,
+td.valign-middle {
+    vertical-align: middle
+}
+
+nav,
+header,
+footer {
     font-size: 16px;
 }
 
-nav a,header a, footer a {
+nav a,
+header a,
+footer a {
     text-decoration: none;
 }
 
-header a:hover, header a:hover, footer a:hover {
+header a:hover,
+header a:hover,
+footer a:hover {
     text-decoration: underline;
 }
 
@@ -114,7 +139,6 @@ header a:hover, header a:hover, footer a:hover {
 .blogHomePageArticleTitle a:hover {
     text-decoration: underline;
 }
-
 
 blockquote {
     padding-left: 15px;
@@ -165,7 +189,8 @@ p {
     padding-bottom: 80px;
 }
 
-#content, footer {
+#content,
+footer {
     margin-left: auto;
     margin-right: auto;
     max-width: 800px;
@@ -217,74 +242,507 @@ hr {
     border-top: solid 1pt #004aa0;
     width: 60%;
 }
-  
+
+
 /* Pygments */
-pre.pygments .hll { background-color: #ffffcc }
-pre.pygments  { background: #f0f0f0; }
-pre.pygments .tok-c { color: #60a0b0; font-style: italic } /* Comment */
-pre.pygments .tok-err { border: 1px solid #FF0000 } /* Error */
-pre.pygments .tok-k { color: #007020; font-weight: bold } /* Keyword */
-pre.pygments .tok-o { color: #666666 } /* Operator */
-pre.pygments .tok-ch { color: #60a0b0; font-style: italic } /* Comment.Hashbang */
-pre.pygments .tok-cm { color: #60a0b0; font-style: italic } /* Comment.Multiline */
-pre.pygments .tok-cp { color: #007020 } /* Comment.Preproc */
-pre.pygments .tok-cpf { color: #60a0b0; font-style: italic } /* Comment.PreprocFile */
-pre.pygments .tok-c1 { color: #60a0b0; font-style: italic } /* Comment.Single */
-pre.pygments .tok-cs { color: #60a0b0; background-color: #fff0f0 } /* Comment.Special */
-pre.pygments .tok-gd { color: #A00000 } /* Generic.Deleted */
-pre.pygments .tok-ge { font-style: italic } /* Generic.Emph */
-pre.pygments .tok-gr { color: #FF0000 } /* Generic.Error */
-pre.pygments .tok-gh { color: #000080; font-weight: bold } /* Generic.Heading */
-pre.pygments .tok-gi { color: #00A000 } /* Generic.Inserted */
-pre.pygments .tok-go { color: #888888 } /* Generic.Output */
-pre.pygments .tok-gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
-pre.pygments .tok-gs { font-weight: bold } /* Generic.Strong */
-pre.pygments .tok-gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-pre.pygments .tok-gt { color: #0044DD } /* Generic.Traceback */
-pre.pygments .tok-kc { color: #007020; font-weight: bold } /* Keyword.Constant */
-pre.pygments .tok-kd { color: #007020; font-weight: bold } /* Keyword.Declaration */
-pre.pygments .tok-kn { color: #007020; font-weight: bold } /* Keyword.Namespace */
-pre.pygments .tok-kp { color: #007020 } /* Keyword.Pseudo */
-pre.pygments .tok-kr { color: #007020; font-weight: bold } /* Keyword.Reserved */
-pre.pygments .tok-kt { color: #902000 } /* Keyword.Type */
-pre.pygments .tok-m { color: #40a070 } /* Literal.Number */
-pre.pygments .tok-s { color: #4070a0 } /* Literal.String */
-pre.pygments .tok-na { color: #4070a0 } /* Name.Attribute */
-pre.pygments .tok-nb { color: #007020 } /* Name.Builtin */
-pre.pygments .tok-nc { color: #0e84b5; font-weight: bold } /* Name.Class */
-pre.pygments .tok-no { color: #60add5 } /* Name.Constant */
-pre.pygments .tok-nd { color: #555555; font-weight: bold } /* Name.Decorator */
-pre.pygments .tok-ni { color: #d55537; font-weight: bold } /* Name.Entity */
-pre.pygments .tok-ne { color: #007020 } /* Name.Exception */
-pre.pygments .tok-nf { color: #06287e } /* Name.Function */
-pre.pygments .tok-nl { color: #002070; font-weight: bold } /* Name.Label */
-pre.pygments .tok-nn { color: #0e84b5; font-weight: bold } /* Name.Namespace */
-pre.pygments .tok-nt { color: #062873; font-weight: bold } /* Name.Tag */
-pre.pygments .tok-nv { color: #bb60d5 } /* Name.Variable */
-pre.pygments .tok-ow { color: #007020; font-weight: bold } /* Operator.Word */
-pre.pygments .tok-w { color: #bbbbbb } /* Text.Whitespace */
-pre.pygments .tok-mb { color: #40a070 } /* Literal.Number.Bin */
-pre.pygments .tok-mf { color: #40a070 } /* Literal.Number.Float */
-pre.pygments .tok-mh { color: #40a070 } /* Literal.Number.Hex */
-pre.pygments .tok-mi { color: #40a070 } /* Literal.Number.Integer */
-pre.pygments .tok-mo { color: #40a070 } /* Literal.Number.Oct */
-pre.pygments .tok-sa { color: #4070a0 } /* Literal.String.Affix */
-pre.pygments .tok-sb { color: #4070a0 } /* Literal.String.Backtick */
-pre.pygments .tok-sc { color: #4070a0 } /* Literal.String.Char */
-pre.pygments .tok-dl { color: #4070a0 } /* Literal.String.Delimiter */
-pre.pygments .tok-sd { color: #4070a0; font-style: italic } /* Literal.String.Doc */
-pre.pygments .tok-s2 { color: #4070a0 } /* Literal.String.Double */
-pre.pygments .tok-se { color: #4070a0; font-weight: bold } /* Literal.String.Escape */
-pre.pygments .tok-sh { color: #4070a0 } /* Literal.String.Heredoc */
-pre.pygments .tok-si { color: #70a0d0; font-style: italic } /* Literal.String.Interpol */
-pre.pygments .tok-sx { color: #c65d09 } /* Literal.String.Other */
-pre.pygments .tok-sr { color: #235388 } /* Literal.String.Regex */
-pre.pygments .tok-s1 { color: #4070a0 } /* Literal.String.Single */
-pre.pygments .tok-ss { color: #517918 } /* Literal.String.Symbol */
-pre.pygments .tok-bp { color: #007020 } /* Name.Builtin.Pseudo */
-pre.pygments .tok-fm { color: #06287e } /* Name.Function.Magic */
-pre.pygments .tok-vc { color: #bb60d5 } /* Name.Variable.Class */
-pre.pygments .tok-vg { color: #bb60d5 } /* Name.Variable.Global */
-pre.pygments .tok-vi { color: #bb60d5 } /* Name.Variable.Instance */
-pre.pygments .tok-vm { color: #bb60d5 } /* Name.Variable.Magic */
-pre.pygments .tok-il { color: #40a070 } /* Literal.Number.Integer.Long */
+
+pre.pygments .hll {
+    background-color: #ffffcc
+}
+
+pre.pygments {
+    background: #f0f0f0;
+}
+
+pre.pygments .tok-c {
+    color: #60a0b0;
+    font-style: italic
+}
+
+
+/* Comment */
+
+pre.pygments .tok-err {
+    border: 1px solid #FF0000
+}
+
+
+/* Error */
+
+pre.pygments .tok-k {
+    color: #007020;
+    font-weight: bold
+}
+
+
+/* Keyword */
+
+pre.pygments .tok-o {
+    color: #666666
+}
+
+
+/* Operator */
+
+pre.pygments .tok-ch {
+    color: #60a0b0;
+    font-style: italic
+}
+
+
+/* Comment.Hashbang */
+
+pre.pygments .tok-cm {
+    color: #60a0b0;
+    font-style: italic
+}
+
+
+/* Comment.Multiline */
+
+pre.pygments .tok-cp {
+    color: #007020
+}
+
+
+/* Comment.Preproc */
+
+pre.pygments .tok-cpf {
+    color: #60a0b0;
+    font-style: italic
+}
+
+
+/* Comment.PreprocFile */
+
+pre.pygments .tok-c1 {
+    color: #60a0b0;
+    font-style: italic
+}
+
+
+/* Comment.Single */
+
+pre.pygments .tok-cs {
+    color: #60a0b0;
+    background-color: #fff0f0
+}
+
+
+/* Comment.Special */
+
+pre.pygments .tok-gd {
+    color: #A00000
+}
+
+
+/* Generic.Deleted */
+
+pre.pygments .tok-ge {
+    font-style: italic
+}
+
+
+/* Generic.Emph */
+
+pre.pygments .tok-gr {
+    color: #FF0000
+}
+
+
+/* Generic.Error */
+
+pre.pygments .tok-gh {
+    color: #000080;
+    font-weight: bold
+}
+
+
+/* Generic.Heading */
+
+pre.pygments .tok-gi {
+    color: #00A000
+}
+
+
+/* Generic.Inserted */
+
+pre.pygments .tok-go {
+    color: #888888
+}
+
+
+/* Generic.Output */
+
+pre.pygments .tok-gp {
+    color: #c65d09;
+    font-weight: bold
+}
+
+
+/* Generic.Prompt */
+
+pre.pygments .tok-gs {
+    font-weight: bold
+}
+
+
+/* Generic.Strong */
+
+pre.pygments .tok-gu {
+    color: #800080;
+    font-weight: bold
+}
+
+
+/* Generic.Subheading */
+
+pre.pygments .tok-gt {
+    color: #0044DD
+}
+
+
+/* Generic.Traceback */
+
+pre.pygments .tok-kc {
+    color: #007020;
+    font-weight: bold
+}
+
+
+/* Keyword.Constant */
+
+pre.pygments .tok-kd {
+    color: #007020;
+    font-weight: bold
+}
+
+
+/* Keyword.Declaration */
+
+pre.pygments .tok-kn {
+    color: #007020;
+    font-weight: bold
+}
+
+
+/* Keyword.Namespace */
+
+pre.pygments .tok-kp {
+    color: #007020
+}
+
+
+/* Keyword.Pseudo */
+
+pre.pygments .tok-kr {
+    color: #007020;
+    font-weight: bold
+}
+
+
+/* Keyword.Reserved */
+
+pre.pygments .tok-kt {
+    color: #902000
+}
+
+
+/* Keyword.Type */
+
+pre.pygments .tok-m {
+    color: #40a070
+}
+
+
+/* Literal.Number */
+
+pre.pygments .tok-s {
+    color: #4070a0
+}
+
+
+/* Literal.String */
+
+pre.pygments .tok-na {
+    color: #4070a0
+}
+
+
+/* Name.Attribute */
+
+pre.pygments .tok-nb {
+    color: #007020
+}
+
+
+/* Name.Builtin */
+
+pre.pygments .tok-nc {
+    color: #0e84b5;
+    font-weight: bold
+}
+
+
+/* Name.Class */
+
+pre.pygments .tok-no {
+    color: #60add5
+}
+
+
+/* Name.Constant */
+
+pre.pygments .tok-nd {
+    color: #555555;
+    font-weight: bold
+}
+
+
+/* Name.Decorator */
+
+pre.pygments .tok-ni {
+    color: #d55537;
+    font-weight: bold
+}
+
+
+/* Name.Entity */
+
+pre.pygments .tok-ne {
+    color: #007020
+}
+
+
+/* Name.Exception */
+
+pre.pygments .tok-nf {
+    color: #06287e
+}
+
+
+/* Name.Function */
+
+pre.pygments .tok-nl {
+    color: #002070;
+    font-weight: bold
+}
+
+
+/* Name.Label */
+
+pre.pygments .tok-nn {
+    color: #0e84b5;
+    font-weight: bold
+}
+
+
+/* Name.Namespace */
+
+pre.pygments .tok-nt {
+    color: #062873;
+    font-weight: bold
+}
+
+
+/* Name.Tag */
+
+pre.pygments .tok-nv {
+    color: #bb60d5
+}
+
+
+/* Name.Variable */
+
+pre.pygments .tok-ow {
+    color: #007020;
+    font-weight: bold
+}
+
+
+/* Operator.Word */
+
+pre.pygments .tok-w {
+    color: #bbbbbb
+}
+
+
+/* Text.Whitespace */
+
+pre.pygments .tok-mb {
+    color: #40a070
+}
+
+
+/* Literal.Number.Bin */
+
+pre.pygments .tok-mf {
+    color: #40a070
+}
+
+
+/* Literal.Number.Float */
+
+pre.pygments .tok-mh {
+    color: #40a070
+}
+
+
+/* Literal.Number.Hex */
+
+pre.pygments .tok-mi {
+    color: #40a070
+}
+
+
+/* Literal.Number.Integer */
+
+pre.pygments .tok-mo {
+    color: #40a070
+}
+
+
+/* Literal.Number.Oct */
+
+pre.pygments .tok-sa {
+    color: #4070a0
+}
+
+
+/* Literal.String.Affix */
+
+pre.pygments .tok-sb {
+    color: #4070a0
+}
+
+
+/* Literal.String.Backtick */
+
+pre.pygments .tok-sc {
+    color: #4070a0
+}
+
+
+/* Literal.String.Char */
+
+pre.pygments .tok-dl {
+    color: #4070a0
+}
+
+
+/* Literal.String.Delimiter */
+
+pre.pygments .tok-sd {
+    color: #4070a0;
+    font-style: italic
+}
+
+
+/* Literal.String.Doc */
+
+pre.pygments .tok-s2 {
+    color: #4070a0
+}
+
+
+/* Literal.String.Double */
+
+pre.pygments .tok-se {
+    color: #4070a0;
+    font-weight: bold
+}
+
+
+/* Literal.String.Escape */
+
+pre.pygments .tok-sh {
+    color: #4070a0
+}
+
+
+/* Literal.String.Heredoc */
+
+pre.pygments .tok-si {
+    color: #70a0d0;
+    font-style: italic
+}
+
+
+/* Literal.String.Interpol */
+
+pre.pygments .tok-sx {
+    color: #c65d09
+}
+
+
+/* Literal.String.Other */
+
+pre.pygments .tok-sr {
+    color: #235388
+}
+
+
+/* Literal.String.Regex */
+
+pre.pygments .tok-s1 {
+    color: #4070a0
+}
+
+
+/* Literal.String.Single */
+
+pre.pygments .tok-ss {
+    color: #517918
+}
+
+
+/* Literal.String.Symbol */
+
+pre.pygments .tok-bp {
+    color: #007020
+}
+
+
+/* Name.Builtin.Pseudo */
+
+pre.pygments .tok-fm {
+    color: #06287e
+}
+
+
+/* Name.Function.Magic */
+
+pre.pygments .tok-vc {
+    color: #bb60d5
+}
+
+
+/* Name.Variable.Class */
+
+pre.pygments .tok-vg {
+    color: #bb60d5
+}
+
+
+/* Name.Variable.Global */
+
+pre.pygments .tok-vi {
+    color: #bb60d5
+}
+
+
+/* Name.Variable.Instance */
+
+pre.pygments .tok-vm {
+    color: #bb60d5
+}
+
+
+/* Name.Variable.Magic */
+
+pre.pygments .tok-il {
+    color: #40a070
+}
+
+
+/* Literal.Number.Integer.Long */
