--- a/static/blog.original.css
+++ b/static/blog.original.css
@@ -1,7 +1,7 @@
 body {
     background-color: #f8fbff;
     color: #004aa0;
-    font-family: "Gill Sans", "Futura", Calibri, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, Garamond, Futura, Calibri, sans-serif;
     font-size: 18px;
     line-height: 190%;
 }
@@ -18,6 +18,7 @@ h3,
 h4,
 h5 {
     line-height: 160%;
+    font-weight: 900;
 }
 
 header {
@@ -42,7 +43,7 @@ code {
 }
 
 em {
-    font-weight: lighter;
+    font-weight: 200;
 }
 
 .imageblock {
