--- a/static/blog.original.css
+++ b/static/blog.original.css
@@ -9,6 +9,7 @@ body {
 @media (max-width: 1250px) {
     body {
         font-size: 24px;
+        line-height: 150%;
     }
 }
 
@@ -19,6 +20,17 @@ h4,
 h5 {
     line-height: 160%;
     font-weight: 900;
+}
+
+@media (max-width: 1250px) {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+        line-height: 120%;
+        text-align: center;
+    }
 }
 
 header {
@@ -165,6 +177,13 @@ blockquote:after {
     content: "\201D";
     right: -30px;
     bottom: 15px;
+}
+
+@media (max-width: 1250px) {
+    blockquote {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
 }
 
 .attribution {
