--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -107,8 +107,8 @@
     <li><a href="https://archiloque.net">Homepage</a></li>
     <li><a href="https://archiloque.net/blog">Blog</a></li>
     <li><a href="https://archiloque.net/weekly">Chosen Links</a></li>
-    <li><a href="https://tinyletter.com/archiloque">Newsletter</a></li>
-    <li><a href="http://mastodon.social/@archiloque">Mastodon</a></li>
+    <li><a href="https://tinyletter.com/archiloque">Subscribe by mail</a></li>
+    <li><a href="https://felin.social/@archiloque">Mastodon</a></li>
   </ul>
 </footer>
 
