--- a/templates/article.erb.html
+++ b/templates/article.erb.html
@@ -108,7 +108,8 @@
     <li><a href="https://archiloque.net/blog">Blog</a></li>
     <li><a href="https://archiloque.net/weekly">Chosen Links</a></li>
     <li><a href="https://tinyletter.com/archiloque">Subscribe by mail</a></li>
-    <li><a href="https://felin.social/@archiloque">Mastodon</a></li>
+    <li><a rel="me" href="https://felin.social/@archiloque">Mastodon tech</a></li>
+    <li><a rel="me" href="https://felin.social/@julienkirch">Mastodon perso</a></li>
   </ul>
 </footer>
 
