--- a/templates/main.erb.html
+++ b/templates/main.erb.html
@@ -32,9 +32,6 @@
     <meta property="twitter:image" content="<%= site_logo_url %>" />
     <meta property="og:type" content="article" />
 
-    <a rel="me" href="https://felin.social/@archiloque">Mastodon</a>
-    <a rel="me" href="https://felin.social/@julienkirch">Mastodon</a>
-
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
@@ -101,7 +98,8 @@
           <li><a href="https://archiloque.net/blog">Blog</a></li>
           <li><a href="https://archiloque.net/weekly">Chosen Links</a></li>
           <li><a href="https://tinyletter.com/archiloque">Subscribe by mail</a></li>
-          <li><a href="https://felin.social/@archiloque">Mastodon</a></li>
+          <li><a rel="me" href="https://felin.social/@archiloque">Mastodon tech</a></li>
+          <li><a rel="me" href="https://felin.social/@julienkirch">Mastodon perso</a></li>
         </ul>
     </nav>
 
