--- a/static/blog.original.css
+++ b/static/blog.original.css
@@ -1,7 +1,7 @@
 body {
     background-color: #f8fbff;
     color: #004aa0;
-    font-family: -apple-system, BlinkMacSystemFont, Garamond, Futura, Calibri, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, Futura, Calibri, sans-serif;
     font-size: 18px;
     line-height: 190%;
 }
